# Python-Stochastic

./: .gitignore  README.md  conda_environment.yml  pyproject.toml  requirements.txt  run.sh  setup.py
Scripts/: tests_1d.py  tests_2d.py  tmp.py
docs/: generator.py  index.md  main.tex
docs/algorithms/: 1d_rsa_dimers.md  1d_rsa_nn_exclusion.md  2d_rsa_nn_exclusion.md
docs/configurations/: configuration_boxes.py  configuration_manager.py
docs/general/: other_general.py
docs/images/: clu_par_1d.py  dif_all_1d.py  dif_vac_1d.py  rsa_dim_1d.py  rsa_nne_1d.py  spi_exc_1d.py  spi_fli_1d.py
docs/images/ads_des_1d/: ads_des_1d.py
docs/manuals/: 1d_rsa_dimers.md  1d_rsa_nn_exclusion.md  2d_rsa_dimers.md  2d_rsa_nn_exclusion.md
docs/other/: 1DGlauberModel.md  configuration_ads_des_1d.yml
docs/shapes/: shapes_latex.py  shapes_lattice_spins_1d.py  shapes_lattice_ticks_1d.py
docs/templates/: template.tex
docs/validate/: validate_arrays_1d.py  validate_general.py  validate_lattice_ticks_1d.py
old/classes/rsa_1d/: nn_exclusion.py
old/classes/rsa_2d/: nn_exclusion.py
old/classes/spin_1d/: neighbors.py
old/utilities/: rsa_parameters.py
scripts/: tests_1d.py
src/Classes/RSA1D/: nn_exclusion.py
src/TestUnits/: test_rsa_2d.py
src/stochastic-kmc/programs/rsa_1d_dimers/: simulation.py
src/stochastic-kmc/programs/rsa_1d_dimers/classes/: lattice.py  results.py  statistics.py
src/stochastic-kmc/programs/rsa_1d_nn_exclusion/: main.py
src/stochastic-kmc/programs/rsa_1d_nn_exclusion/classes/: lattice.py  parameters.py
src/stochastic-kmc/programs/rsa_2d_dimers/: main.py
src/stochastic-kmc/programs/rsa_2d_dimers/classes/: lattice.py
src/stochastic-kmc/programs/rsa_2d_dimers/configs/: parameters.json
src/stochastic-kmc/programs/rsa_2d_dimers/validation/: load.py
src/stochastic-kmc/programs/rsa_2d_nn_exclusion/: main.py
src/stochastic-kmc/programs/rsa_2d_nn_exclusion/classes/: parameters.py
src/stochastic-kmc/programs/rsa_2d_nn_exclusion/validation/: parameters.py
src/stochastic-kmc/utilities/: validate.py
src/stochastic/Classes/RSA2D/: nn_exclusion.py
src/stochastic/Interfaces/: Spin1D_interface.py
src/stochastic/Utilities/: RSA_analysis.py  Spin1D_parameters.py
src/stochastic/classes/RSA1D/: dimers.py  nn_exclusion.py
src/stochastic/classes/RSA2D/: dimers.py  nn_exclusion.py
src/stochastic/classes/Spin1D/: neighbors.py
src/stochastic/classes/rsa_1d/: dimers.py  nn_exclusion.py
src/stochastic/classes/rsa_2d/: dimers.py  nn_exclusion.py
src/stochastic/interfaces/: RSA_1D_interface.py  RSA_2D_interface.py  Spin1D_interface.py  rsa_1d_interface.py  rsa_2d_interface.py  spin_1d_interface.py
src/stochastic/programs/rsa_1d_dimers/: main.py  simulation.py
src/stochastic/programs/rsa_1d_dimers/classes/: history.py  lattice.py  parameters.py  results.py  statistics.py
src/stochastic/programs/rsa_1d_dimers/configs/: parameters.json
src/stochastic/programs/rsa_1d_dimers/simulation/: main.py
src/stochastic/programs/rsa_1d_nn_exclusion/: main.py  simulation.py
src/stochastic/programs/rsa_2d_dimers/: main.py  simulation.py
src/stochastic/programs/rsa_2d_nn_exclusion/: main.py  simulation.py
src/stochastic/rsa_1d_dimers/: main.py
src/stochastic/rsa_1d_dimers/validation/: parameters.py
src/stochastic/utilities/: general.py  rsa_analysis.py  rsa_parameters.py  validate.py
src/stochastic_kmc/programs/rsa_1d_dimers/: __main__.py  main.py  simulation.py
src/stochastic_kmc/programs/rsa_1d_nn_exclusion/: __main__.py  main.py  simulation.py
src/stochastic_kmc/programs/rsa_2d_dimers/: __main__.py  main.py  simulation.py
src/stochastic_kmc/programs/rsa_2d_nn_exclusion/: __main__.py  main.py  simulation.py
stochastic/Classes/: RSA_analysis.py  RSA_parameters.py  dimers.py
stochastic/Classes/RSA1D/: dimers.py  nn_exclusion.py
stochastic/Classes/RSA2D/: dimers.py
stochastic/Classes/Spin1D/: neighbors.py
stochastic/Interfaces/: RSA_1D_interface.py  RSA_2D_interface.py  RSA__1D_interface.py  RSA_interface.py  Spin1D_interface.py
stochastic/RSA/: rsa.py
stochastic/RSA1D/: rsa.py
stochastic/Scripts/: tmp.py
stochastic/TestUnits/: test_rsa.py  test_rsa_1d.py  test_rsa_2d.py  test_spin_1D.py
stochastic/Utilities/: RSA_analysis.py  RSA_parameters.py
temp/linting/: linting.py  linting_flake8.txt  linting_pylint.txt
temp/old/classes/rsa_2d/: dimers.py
temp/old/interfaces/: rsa_1d_interface.py  rsa_2d_interface.py
temp/old/utilities/: spin_1d_parameters.py
temp/scripts/: RSA-1D-Dimers_20260202141745.txt  tests.py
temp/scripts/RSA-1D-Dimers_20260204162106/: save.json
temp/scripts/RSA-1D-Dimers_20260204204502/: generator.pkl  save.json
temp/scripts/RSA-1D-Dimers_20260206210439/: simulation.sim
temp/scripts/RSA-1D-Dimers_20260206221856/: simulation.sim
tests/: test_rsa_1d.py  test_rsa_2d.py  test_spin_1D.py
tests/programs/rsa_1d_dimers/: test_main.py  test_simulation.py
tests/programs/rsa_1d_dimers/classes/: test_lattice.py  test_parameters.py  test_results.py  test_statistics.py
tests/programs/rsa_1d_dimers/config/: test_parameters.py
tests/programs/rsa_1d_dimers/validation/: test_parameters.py
tests/utilities/: test_general.py  test_validate.py
(+54 files in other folders)
