# This is the installation script for the package "stochastic" For more
# information on how more parameters can be added, see:
# https://setuptools.readthedocs.io/en/latest/userguide/declarative_config.html


# ------------------------------- Build System ------------------------------- #


[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"


# ------------------------------ Project Details ----------------------------- #


[project]
name = "stochastic_kmc"
authors = [
    {name = "Andres Garcia Escovar", email = "andrumen1@yahoo.com"},
]
description = "A suite where multiple types of stochastic simulations can be performed."
readme = "README.md"
requires-python = ">=3.11"
keywords = ["", "stochastic"]
license = {text = "MIT"}
dependencies = []
version = "0.0.1"


# ----------------------------- Package Commands ----------------------------- #


[project.optional-dependencies]
linting = [
    "flake8",
    "pylint"
]


# ----------------------------- Package Commands ----------------------------- #


[project.scripts]
stochastic-kmc-1d-rsa-dimers = "stochastic_kmc.programs.rsa_1d_dimers.__main__:main"
stochastic-kmc-1d-rsa-nn-exclusion = "stochastic_kmc.programs.rsa_1d_nn_exclusion.__main__:main"
stochastic-kmc-2d-rsa-dimers = "stochastic_kmc.programs.rsa_2d_dimers.__main__:main"
stochastic-kmc-2d-rsa-nn-exclusion = "stochastic_kmc.programs.rsa_2d_nn_exclusion.__main__:main"


# ------------------------------- Package URLS ------------------------------- #


[project.urls]
repository = "https://github.com/AndresGarciaEscovar/Stochastic"


# ------------------ Tools: Setuptools - Packages to Include ----------------- #


[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false


# ------------------------------- Tools: Pylint ------------------------------ #


[tool.pylint."MESSAGES CONTROL"]
disable = [
    "duplicate-code"
]
